--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phteah Rung Village</title>
+    <title>Chhaiya Phai website</title>
 
     <link
     rel="stylesheet"
@@ -22,12 +22,12 @@
 <!-- header section starts -->
 
 <header class="header">
-    <a href="#" class="logo"><i class="fas fa-seedling"></i> ភូមិផ្ទះរុង</a>
+    <a href="#" class="logo"><i class="fas fa-user"></i> Chhaiya Phai</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#features">features</a>
-        <a href="#products">picture</a>
+        <a href="#pictures">picture</a>
     </nav>
 
     <div class="icons">
@@ -48,7 +48,7 @@
             <img src="photo/creator.jpg" alt="">
             <div class="content">
                 <h3>Chhaiya Developer</h3>
-                <span class="price">Backend Developer</span>
+                <span class="price">Web Developer</span>
             </div>
         </div>
         
@@ -70,15 +70,7 @@
 
 <!-- home section starts -->
 
-<section class="home" id="home">
-
-    <div class="content">
-        <h3>ភូមិ <span>ផ្ទះរុង</span> សូមស្វាគមន៏</h3>
-        <p>សូមស្វាគមន៏មកកាន់គេហទំព័រភូមិផ្ទះរុង ស្ថិតនៅក្នុងឃុំផ្ទះរុង ស្រុកតាលោសែនជ័យ ខេត្តពោធិ៏សាត់</p>
-        <a href="https://en.wikipedia.org/wiki/Phteah_Rung_Commune" class="btn">learn more</a>
-    </div>
-
-</section>
+<section class="home" id="home"></section>
 
 <!-- home section ends -->
 
@@ -86,29 +78,22 @@
 
 <section class="features" id="features">
 
-    <h1 class="heading"> our<span>features</span></h1>
+    <h1 class="heading"> my Educations</h1>
 
     <div class="box-container">
 
         <div class="box">
-            <img src="photo/montain.jpg" alt="">
-            <h3>montain</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
+            <img src="photo/card-1.jpg" alt="">
+            <h3>2017-2020</h3>
+            <p>Studies at Hun Sen Phnom Kravanh high school.</p>
+            <a href="https://www.google.com/search?q=%E1%9E%9C%E1%9E%B7%E1%9E%91%E1%9F%92%E1%9E%99%E1%9E%B6%E1%9E%9B%E1%9F%90%E1%9E%99%20%E1%9E%97%E1%9F%92%E1%9E%93%E1%9F%86%E1%9E%80%E1%9F%92%E1%9E%9A%E1%9E%9C%E1%9E%B6%E1%9E%89&source=lmns&bih=568&biw=1242&rlz=1C1BNSD_enKH988KH988&hl=en&sa=X&ved=2ahUKEwimw76Smrv5AhXPgFYBHYBeCzoQvS56BAgDEAE&tbs=lf:1,lf_ui:2&tbm=lcl&sxsrf=ALiCzsadrDaT-utYk2VMXrdRQshuJr_m7w:1660097777354&rflfq=1&num=10&rldimm=16475569490917146935&lqi=CjrhnpzhnrfhnpHhn5Lhnpnhnrbhnpvhn5Dhnpkg4Z6X4Z-S4Z6T4Z-G4Z6A4Z-S4Z6a4Z6c4Z624Z6JSPnxzZWeqoCACFpFEAAYABgBGAIiO-GenOGet-GekeGfkuGemeGetuGem-GfkOGemSDhnpfhn5LhnpPhn4Yg4Z6A4Z-S4Z6a4Z6c4Z624Z6JkgELaGlnaF9zY2hvb2yqASMQASofIhvhnpzhnrfhnpHhn5Lhnpnhnrbhnpvhn5DhnpkoaA&rlst=f#rlfi=hd:;si:16475569490917146935,l,CjrhnpzhnrfhnpHhn5Lhnpnhnrbhnpvhn5Dhnpkg4Z6X4Z-S4Z6T4Z-G4Z6A4Z-S4Z6a4Z6c4Z624Z6JSPnxzZWeqoCACFpFEAAYABgBGAIiO-GenOGet-GekeGfkuGemeGetuGem-GfkOGemSDhnpfhn5LhnpPhn4Yg4Z6A4Z-S4Z6a4Z6c4Z624Z6JkgELaGlnaF9zY2hvb2yqASMQASofIhvhnpzhnrfhnpHhn5Lhnpnhnrbhnpvhn5DhnpkoaA;mv:[[12.3513191,103.7601093],[12.3512575,103.75907889999999]];tbs:lrf:!1m4!1u2!2m2!2m1!1e1!2m1!1e2!3sIAE,lf:1,lf_ui:2" class="btn">read more</a>
         </div>
 
         <div class="box">
-            <img src="photo/rever.jpg" alt="">
-            <h3>river</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
-        </div>
-
-        <div class="box">
-            <img src="photo/sun set.jpg" alt="">
-            <h3>sunset</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
+            <img src="photo/card-2.jpg" alt="">
+            <h3>2020-2022</h3>
+            <p>Study at Passerelles Numeriques Cambodia(PNC)</p>
+            <a href="https://www.google.com/search?q=pn&rlz=1C1BNSD_enKH988KH988&oq=pn&aqs=chrome.0.69i59j0i131i433i512j0i433i512j0i131i433i512l2j69i60j69i61j69i60.1956j0j7&sourceid=chrome&ie=UTF-8&tbs=lf:1,lf_ui:2&tbm=lcl&sxsrf=ALiCzsZHlGkMmGFfBd5Zh-z9w_YgFlA4pw:1660098177875&rflfq=1&num=10&rldimm=1665781461124839354&lqi=CgJwbkjts7LF5YCAgAhaBhAAIgJwbpIBB2NvbGxlZ2WqAQoQASoGIgJwbigA&ved=2ahUKEwiTsLzRm7v5AhVlgVYBHe8bCzoQvS56BAgFEAE&sa=X&rlst=f#rlfi=hd:;si:1665781461124839354,l,CgJwbkjts7LF5YCAgAhaBhAAIgJwbpIBB2NvbGxlZ2WqAQoQASoGIgJwbigA;mv:[[11.653971799999999,104.9661216],[11.3678381,104.75965629999999]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:2" class="btn">read more</a>
         </div>
 
     </div>
@@ -117,70 +102,34 @@
 
 <!-- features section ends -->
 
-<!-- products section starts -->
+<!-- pictures section starts -->
 
 <section class="pictures" id="pictures">
 
-    <h1 class="heading"> our <span>pictures</span></h1>
+    <h1 class="heading"> My pictures</h1>
 
     <div class="swiper picture-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="photo/rever.jpg" alt="">
-                <h3>river</h3>
-                <div class="text"> river </div>        
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-                <a href="photo/rever.jpg" download class="btn">save</a>    
+                <img src="photo/pic-1.jpg" alt="">    
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>    
             </div>
 
             <div class="swiper-slide box">
-                <img src="photo/rever.jpg" alt="">
-                <h3>river</h3>
-                <div class="text"> river </div>        
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-                <a href="photo/rever.jpg" download class="btn">save</a>
+                <img src="photo/pic-2.jpg" alt="">  
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>  
             </div>
 
             <div class="swiper-slide box">
-                <img src="photo/rever.jpg" alt="">
-                <h3>river</h3>
-                <div class="text"> river </div>        
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-                <a href="photo/rever.jpg" download class="btn">save</a>    
+                <img src="photo/pic-3.jpg" alt="">
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>      
             </div>
 
             <div class="swiper-slide box">
-                <img src="photo/rever.jpg" alt="">
-                <h3>river</h3>
-                <div class="text"> river </div>        
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-                <a href="photo/rever.jpg" download class="btn">save</a>
+                <img src="photo/pic-2.jpg" alt="">
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>  
             </div>
 
         </div>
@@ -194,10 +143,10 @@
     <div class="box-container">
 
         <div class="box">
-            <h3>ភូមិផ្ទះរុង <i class="fas fa-seedling"></i></h3>
+            <h3>Chhaiya Phai <i class="fas fa-user"></i></h3>
             <p>please contact me to know more infornation.</p>
             <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
                 <a href="#" class="fab fa-instagram"></a>
                 <a href="#" class="fab fa-linkedin"></a>
@@ -206,22 +155,15 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> +885-718-177-481</a>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> +885-963-333-777</a>
-            <a href="#" class="links"> <i class="fas fa-envelope"></i> chhaiya@gamil.com </a>
+            <a href="#" class="links"> <i class="fas fa-phone"></i> +885-963-928-446</a>
+            <a href="#" class="links"> <i class="fas fa-phone"></i> +885-716-177-481</a>
+            <a href="#" class="links"> <i class="fas fa-envelope"></i> chhaiya.phai@student.passerellesnumeriques.org</a>
             <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> phnom penh, cambodia</a>
-        </div>
-
-        <div class="box">
-            <h3>newsletter</h3>
-            <p>subscribe for latest updates</p>
-            <input type="email" placeholder="your email" class="email">
-            <input type="submit" value="subscribe" class="btn">
         </div>
 
     </div>
 
-    <div class="credit"> create by <span> Chhaiya Developer</span></div>
+    <div class="credit"> create by <span> Chhaiya PHAI</span></div>
 
 </section>
 
