--- a/index.html
+++ b/index.html
@@ -128,7 +128,17 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="photo/pic-2.jpg" alt="">
+                <img src="photo/pic-4.jpg" alt="">
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>  
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="photo/pic-5.jpg" alt="">
+                <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>  
+            </div>
+
+            <div class="swiper-slide box">
+                <img src="photo/pic-6.jpg" alt="">
                 <a href="https://www.facebook.com/profile.php?id=100070285516838" class="btn">learn more</a>  
             </div>
 
