--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="box">
             <img src="photo/creator.jpg" alt="">
             <div class="content">
-                <h3>Chhaiya Developer</h3>
-                <span class="price">Web Developer</span>
+                <h3>Mr. Chhaiya Phai</h3>
+                <span class="price">Web Development</span>
             </div>
         </div>
         
@@ -73,6 +73,23 @@
 <section class="home" id="home"></section>
 
 <!-- home section ends -->
+
+<!-- main-show section ends -->
+
+<section class="main-show" id="main-show">
+
+    <h1 class="heading"> my personal data</h1>
+    <div class="text-container">
+        <h3>Hello! my name is Chhaiya Phai. I live in Pteah Rung village, Pteah Rung commune, 
+            Talo Sen Chey district, Pursat provine. I graduated from high school in 2020 and 
+            I continue to study at university at Phnom Phen city. My major is <span>Web Development</span>. 
+            This website use to descript my personal data.
+        </h3>
+    </div>
+
+</section>
+
+<!-- main-show section ends -->
 
 <!-- features section starts -->
 
@@ -143,7 +160,7 @@
     <div class="box-container">
 
         <div class="box">
-            <h3>Chhaiya Phai <i class="fas fa-user"></i></h3>
+            <h3>chhaiya phai <i class="fas fa-user"></i></h3>
             <p>please contact me to know more infornation.</p>
             <div class="share">
                 <a href="https://www.facebook.com/profile.php?id=100070285516838" class="fab fa-facebook-f"></a>
