--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
+        <a href="#experiences">experiences</a>
         <a href="#features">features</a>
         <a href="#pictures">picture</a>
     </nav>
@@ -48,7 +49,7 @@
             <img src="photo/creator.jpg" alt="">
             <div class="content">
                 <h3>Mr. Chhaiya Phai</h3>
-                <span class="price">Web Development</span>
+                <span class="price">Web Developer</span>
             </div>
         </div>
         
@@ -74,9 +75,9 @@
 
 <!-- home section ends -->
 
-<!-- main-show section ends -->
+<!-- main-show section starts -->
 
-<section class="main-show" id="main-show">
+<section class="main-show" id="experiences">
 
     <h1 class="heading"> my personal data</h1>
     <div class="text-container">
@@ -84,6 +85,56 @@
             Talo Sen Chey district, Pursat provine. I graduated from high school in 2020 and 
             I continue to study at university at Phnom Phen city. My major is <span>Web Development</span>. 
             This website use to descript my personal data.
+        </h3>
+    </div>
+
+</section>
+
+<!-- main-show section ends -->
+
+<section class="main-show" id="main-show">
+
+    <h1 class="heading"> my experiences</h1>
+    <div class="text-container">
+        <h3><span>28 October 2021</span> I had built a personal website.
+            This website use for describe about my personal
+            information. It had developed by HTML and CSS
+            programming language.
+        </h3>
+    </div>
+
+    <div class="text-container">
+        <h3><span>15 December 2021</span> Finishing of Python course I
+            have a project to do. This project is have two of
+            students. I worked with my classmate to create.            
+        </h3>
+    </div>
+
+    <div class="text-container">
+        <h3><span>15 January 2022</span> To apply skills when finished of
+            JavaScript language, I had created a project name
+            Quiz App that use HTML, CSS, and JavaScript.                        
+        </h3>
+    </div>
+
+    <div class="text-container">
+        <h3><span>17 March 2022</span> Created a project with PHP
+            programming language. The name of project is
+            Facebook Version 0.2 that use PHP, HTML, CSS,
+            JavaScript, and Database.                        
+        </h3>
+    </div>
+
+    <div class="text-container">
+        <h3><span>02 May 2022</span> The achievement of finished Node.
+            Js, I had created Quiz App project that made with
+            Node.js, HTML, CSS, and Database                        
+        </h3>
+    </div>
+
+    <div class="text-container">
+        <h3><span>01 July 2022</span> I had create a Restaurant System
+            Management. It make only Object Oriented Programming(OOP).                                   
         </h3>
     </div>
 
