--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="photo/creator.jpg" alt="">
             <div class="content">
                 <h3>Mr. Chhaiya Phai</h3>
-                <span class="price">Web Developer</span>
+                <span class="price">Backend Engineer</span>
             </div>
         </div>
         
